@@ -2,6 +2,7 @@
   * experimental feature: output video to a different display than control panel.
     set gui.video_display to the second display name, usually ":0.1" or ":1",
   * removed -funroll-all-loops from SPARC and PPC targets.
+  * fix xitk trying set a window property when its atom may be undefined
 
 xine-ui (0.99.1) unstable; urgency=low
 
